--- a/frontend_one/index.html
+++ b/frontend_one/index.html
@@ -1,13 +1,113 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App 1</title>
+    <title>Frontend One</title>
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@4.10.2/dist/full.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body>
-    <div id="app"></div>
+  <body class="h-screen">
+
+    <div class="h-full">
+      <div class="navbar bg-base-100 shadow-lg">
+        <div class="navbar-start">
+          <a class="btn btn-ghost text-xl">distroFrontends</a>
+        </div>
+
+        <div class="navbar-end">
+          <a class="btn">Sign In</a>
+        </div>
+      </div>
+
+      <div
+        class="flex h-full flex-col w-full justify-center items-center py-10"
+      >
+        <h2 class="text-4xl">Frontend One</h2>
+
+        <h2>Email: <span id="emailDisplay"></span></h2>
+        <h2>Username: <span id="usernameDisplay"></span></h2>
+
+        <div class="flex">
+          <div class="card w-96 bg-base-100 shadow-xl">
+            <div class="card-body items-center text-center">
+              <h2 class="card-title">Sign In</h2>
+
+              <div class="w-full my-4">
+                <label
+                  class="input input-bordered flex items-center gap-2 mb-4"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 16 16"
+                    fill="currentColor"
+                    class="w-4 h-4 opacity-70"
+                  >
+                    <path
+                      d="M2.5 3A1.5 1.5 0 0 0 1 4.5v.793c.026.009.051.02.076.032L7.674 8.51c.206.1.446.1.652 0l6.598-3.185A.755.755 0 0 1 15 5.293V4.5A1.5 1.5 0 0 0 13.5 3h-11Z"
+                    />
+                    <path
+                      d="M15 6.954 8.978 9.86a2.25 2.25 0 0 1-1.956 0L1 6.954V11.5A1.5 1.5 0 0 0 2.5 13h11a1.5 1.5 0 0 0 1.5-1.5V6.954Z"
+                    />
+                  </svg>
+                  <input
+                    id="emailInput"
+                    type="text"
+                    class="grow"
+                    placeholder="Email"
+                  />
+                </label>
+                <label
+                  class="input input-bordered flex items-center gap-2 mb-4"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 16 16"
+                    fill="currentColor"
+                    class="w-4 h-4 opacity-70"
+                  >
+                    <path
+                      d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6ZM12.735 14c.618 0 1.093-.561.872-1.139a6.002 6.002 0 0 0-11.215 0c-.22.578.254 1.139.872 1.139h9.47Z"
+                    />
+                  </svg>
+                  <input
+                    id="usernameInput"
+                    type="text"
+                    class="grow"
+                    placeholder="Username"
+                  />
+                </label>
+                <label class="input input-bordered flex items-center gap-2">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 16 16"
+                    fill="currentColor"
+                    class="w-4 h-4 opacity-70"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      d="M14 6a4 4 0 0 1-4.899 3.899l-1.955 1.955a.5.5 0 0 1-.353.146H5v1.5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1-.5-.5v-2.293a.5.5 0 0 1 .146-.353l3.955-3.955A4 4 0 1 1 14 6Zm-4-2a.75.75 0 0 0 0 1.5.5.5 0 0 1 .5.5.75.75 0 0 0 1.5 0 2 2 0 0 0-2-2Z"
+                      clip-rule="evenodd"
+                    />
+                  </svg>
+                  <input type="password" class="grow" value="password" />
+                </label>
+              </div>
+
+              <div class="card-actions">
+                <button id="signInButton" class="btn btn-wide btn-primary">Sign In</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
