--- a/frontend_two/index.html
+++ b/frontend_two/index.html
@@ -1,13 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Frontend Two</title>
+
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body>
-    <div id="app"></div>
+  <body class="h-screen w-full bg-indigo-500">
+    <div class="flex flex-col items-center justify-center h-full">
+      <h2 class="text-4xl text-white">Frontend Two</h2>
+      <p class="text-2xl text-white">Hey <span id="usernameDisplay"></span>! Thanks for signing up! We've sent an email to: <span id="emailDisplay"></span></p>
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
